--- a/vignettes/phenesse_vignette.Rmd
+++ b/vignettes/phenesse_vignette.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "phenesse vignette"
-output: html_vignette
+output:
+  rmarkdown::html_vignette:
+    toc: true
+    keep_md: true
 vignette: >
   %\VignetteIndexEntry{phenesse vignette}
   %\VignetteEngine{knitr::rmarkdown}
@@ -16,6 +19,7 @@ knitr::opts_chunk$set(
 
 library(phenesse)
 library(dplyr)
+
 ```
 
 **Contact Information:** Michael W. Belitz (<mbelitz@ufl.edu>)
@@ -43,8 +47,7 @@ inat_examples <- inat_examples
 Estimate the onset, 10% and 50% of when Speyeria cybele has been observed in 2019 across the entire extent.
 
 ```{r Speyeria_cybele_estimates}
-s_cybele <- inat_examples %>% 
-  dplyr::filter(scientific_name == "Speyeria cybele")
+s_cybele <- dplyr::filter(inat_examples, scientific_name == "Speyeria cybele")
 
 # calculate onset
 weib_percentile(observations = s_cybele$doy, percentile = 0, iterations = 100)
@@ -61,11 +64,10 @@ weib_percentile(observations = s_cybele$doy, percentile = 0.5, iterations = 100)
 Estimate the 50% of when Speyeria cybele were observed in 2019 and calculate CI
 
 ```{r Speyeria_cybele_CIestimates}
-s_cybele <- inat_examples %>% 
-  dplyr::filter(scientific_name == "Speyeria cybele")
+s_cybele <- dplyr::filter(inat_examples, scientific_name == "Speyeria cybele")
 
-# calculate onset
-weib_percentile_ci(observations = s_cybele$doy, iterations = 50, percentile = 0.5, bootstraps = 50)
+# calculate onset - note ignoring for vignette test
+#weib_percentile_ci(observations = s_cybele$doy, iterations = 50, percentile = 0.5, bootstraps = 50)
 # note warnings of extreme order points used as endpoints is due to the low number of bootsraps used. Please use higher number of bootstraps if using for analyses.
 ```
 
@@ -74,8 +76,7 @@ weib_percentile_ci(observations = s_cybele$doy, iterations = 50, percentile = 0.
 Estimate the 10% and 50% phenometrics and confidence intervals for a quantile estimate of Rudbeckia hirta.
 
 ```{r quantile_CIestimates}
-r_hirta <- inat_examples %>% 
-  dplyr::filter(scientific_name == "Rudbeckia hirta")
+r_hirta <- dplyr::filter(inat_examples, scientific_name == "Rudbeckia hirta")
 
 # calculate 50% quantile and CIs
 quantile_ci(observations = r_hirta$doy, percentile = 0.5)
@@ -84,8 +85,7 @@ quantile_ci(observations = r_hirta$doy, percentile = 0.5)
 Calculate the mean estimate and confidence intervals of the estimate of Rudbeckia hirta.
 
 ```{r mean_CIestimates}
-r_hirta <- inat_examples %>% 
-  dplyr::filter(scientific_name == "Rudbeckia hirta")
+r_hirta <- dplyr::filter(inat_examples, scientific_name == "Rudbeckia hirta")
 
 # calculate 50% quantile and CIs
 mean_ci(observations = r_hirta$doy)
