increasing speed of examples

--- a/vignettes/phenesse_vignette.Rmd
+++ b/vignettes/phenesse_vignette.Rmd
@@ -18,7 +18,6 @@ knitr::opts_chunk$set(
 )
 
 library(phenesse)
-library(dplyr)
 
 ```
 
@@ -47,14 +46,15 @@ inat_examples <- inat_examples
 Estimate the onset, 10% and 50% of when Speyeria cybele has been observed in 2019 across the entire extent.
 
 ```{r Speyeria_cybele_estimates}
-s_cybele <- dplyr::filter(inat_examples, scientific_name == "Speyeria cybele")
+s_cybele <- subset(inat_examples, scientific_name == "Speyeria cybele")
 
-# calculate onset
-weib_percentile(observations = s_cybele$doy, percentile = 0, iterations = 100)
+# calculate onset, note iterations are much lower than desired for quick 
+# vignette knit. Increase interations for robust calculations
+weib_percentile(observations = s_cybele$doy, percentile = 0, iterations = 20)
 #calculate 1st percentile
-weib_percentile(observations = s_cybele$doy, percentile = 0.1, iterations = 100)
+weib_percentile(observations = s_cybele$doy, percentile = 0.1, iterations = 20)
 #calculate 50th percentile
-weib_percentile(observations = s_cybele$doy, percentile = 0.5, iterations = 100)
+weib_percentile(observations = s_cybele$doy, percentile = 0.5, iterations = 20)
 ```
 
 # Use non-parametric bootsrapping to calculate confidence interaval of estimate
@@ -64,11 +64,14 @@ weib_percentile(observations = s_cybele$doy, percentile = 0.5, iterations = 100)
 Estimate the 50% of when Speyeria cybele were observed in 2019 and calculate CI
 
 ```{r Speyeria_cybele_CIestimates}
-s_cybele <- dplyr::filter(inat_examples, scientific_name == "Speyeria cybele")
+s_cybele <- subset(inat_examples, scientific_name == "Speyeria cybele")
 
 # calculate onset - note ignoring for vignette test
-#weib_percentile_ci(observations = s_cybele$doy, iterations = 50, percentile = 0.5, bootstraps = 50)
-# note warnings of extreme order points used as endpoints is due to the low number of bootsraps used. Please use higher number of bootstraps if using for analyses.
+#weib_percentile_ci(observations = s_cybele$doy, iterations = 50,
+# percentile = 0.5, bootstraps = 50)
+# note warnings of extreme order points used as endpoints is due to the 
+# low number of bootsraps used. Please use higher number of bootstraps if 
+# using for analyses.
 ```
 
 # Use functions to calculate confidence interval of quanitle function and mean estimates
@@ -76,18 +79,18 @@ s_cybele <- dplyr::filter(inat_examples, scientific_name == "Speyeria cybele")
 Estimate the 10% and 50% phenometrics and confidence intervals for a quantile estimate of Rudbeckia hirta.
 
 ```{r quantile_CIestimates}
-r_hirta <- dplyr::filter(inat_examples, scientific_name == "Rudbeckia hirta")
+r_hirta <- subset(inat_examples, scientific_name == "Rudbeckia hirta")
 
 # calculate 50% quantile and CIs
-quantile_ci(observations = r_hirta$doy, percentile = 0.5)
+quantile_ci(observations = r_hirta$doy, percentile = 0.5, bootstraps = 100)
 ```
 
 Calculate the mean estimate and confidence intervals of the estimate of Rudbeckia hirta.
 
 ```{r mean_CIestimates}
-r_hirta <- dplyr::filter(inat_examples, scientific_name == "Rudbeckia hirta")
+r_hirta <- subset(inat_examples, scientific_name == "Rudbeckia hirta")
 
 # calculate 50% quantile and CIs
-mean_ci(observations = r_hirta$doy)
+mean_ci(observations = r_hirta$doy, bootstraps = 100)
 ```
 
